# rv-curves

./: .env  .gitignore  Cargo.toml  README.md  example.csv  project.md  tasks.md  test at1.csv
debug/: rv_debug_20251226_seed0_20251230_145417.md  rv_debug_20251226_seed0_20251230_152453.md  rv_debug_20251226_seed0_20251230_164537.md  rv_debug_20251226_seed0_20251230_170644.md  rv_debug_20251226_seed0_20251230_171640.md  rv_debug_20251226_seed48_20251230_160848.md  rv_debug_20251226_seed48_20251230_163916.md
docs/: README.md  architecture.md  cli.md  csv.md  fitting.md  models.md  output.md  testing.md  tui.md
src/: app.rs  error.rs  lib.rs  main.rs
src/app/: pipeline.rs
src/cli/: mod.rs  picker.rs
src/data/: fred.rs  mod.rs  sample.rs
src/debug/: mod.rs
src/domain/: mod.rs  types.rs
src/fit/: fitter.rs  mod.rs  selection.rs  tau_grid.rs
src/io/: curve.rs  export.rs  ingest.rs  mod.rs
src/math/: basis.rs  mod.rs  ols.rs
src/models/: mod.rs  model.rs
src/plot/: ascii.rs  mod.rs
src/report/: format.rs  mod.rs
src/tui/: mod.rs  plotters_chart.rs
