[package]
name = "rv-curves"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "rv"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dotenvy = "0.15"
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
ratatui = "0.29"
rayon = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
